--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Fragments.Home">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.fragment.app.FragmentContainerView
+            android:background="@color/design_default_color_secondary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Home"/>
-
-</FrameLayout>
+            android:id="@+id/home_maps_view"
+            tools:context=".Fragments.MapsFragment"
+            android:name="com.google.android.gms.maps.SupportMapFragment" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageView
+            android:id="@+id/btn_layer"
+            android:padding="5dp"
+            android:background="@drawable/circle_background"
+            android:src="@drawable/ic_layer"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/home_maps_view"
+            app:layout_constraintTop_toTopOf="parent"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
