--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/base_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Routing">
@@ -21,18 +22,18 @@
         fab:menu_fab_label="Choose the type of map"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="70dp"
         fab:menu_animationDelayPerItem="50"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
         fab:menu_colorNormal="#FFF"
         fab:menu_colorPressed="#C1C1C1"
         fab:menu_colorRipple="#99FFFFFF"
-        fab:menu_fab_size="normal"
-        fab:menu_icon="@drawable/ic_map"
+        fab:menu_fab_size="mini"
+        fab:menu_icon="@drawable/ic_layer"
         fab:menu_labels_colorNormal="#333333"
         fab:menu_labels_colorPressed="#444444"
         fab:menu_labels_colorRipple="#66FFFFFF"
@@ -48,17 +49,18 @@
         fab:menu_labels_paddingTop="4dp"
         fab:menu_labels_position="right"
         fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
-        fab:menu_labels_showShadow="true"
         fab:menu_labels_singleLine="false"
         fab:menu_labels_style="@style/LabelStyle"
         fab:menu_labels_textColor="#FFFFFF"
         fab:menu_labels_textSize="14sp"
         fab:menu_openDirection="up"
+        fab:menu_labels_showShadow="true"
         fab:menu_shadowColor="#66000000"
-        fab:menu_shadowRadius="4dp"
+        fab:menu_shadowRadius="1dp"
         fab:menu_shadowXOffset="1dp"
-        fab:menu_shadowYOffset="3dp"
-        fab:menu_showShadow="true">
+        fab:menu_shadowYOffset="1dp"
+        fab:menu_showShadow="true"
+        >
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fbtn_normal"
@@ -113,4 +115,18 @@
             android:padding="20dp"/>
     </com.github.clans.fab.FloatingActionMenu>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_route"
+        android:src="@drawable/ic_direction"
+        app:fabSize="normal"
+        android:backgroundTint="@color/blue"
+        android:tint="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
