--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,24 +5,13 @@
              android:layout_height="match_parent"
              tools:context=".Fragments.Home">
     <androidx.fragment.app.FragmentContainerView
-            android:background="@color/design_default_color_secondary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/home_maps_view"
+            android:id="@+id/streetviewpanorama"
             tools:context=".Fragments.MapsFragment"
-            android:name="com.google.android.gms.maps.SupportMapFragment" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <ImageView
-            android:id="@+id/btn_layer"
-            android:padding="5dp"
-            android:background="@drawable/circle_background"
-            android:src="@drawable/ic_layer"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/home_maps_view"
+            android:name="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
             app:layout_constraintTop_toTopOf="parent"
-    />
+            app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
