--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -11,9 +11,9 @@
     <item
         android:id="@+id/item_fragment_3"
         android:title="Routing"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_route"/>
     <item
         android:id="@+id/item_fragment_4"
-        android:title="4"
-        android:icon="@drawable/ic_home"/>
+        android:title="Street view"
+        android:icon="@drawable/ic_3d"/>
 </menu>
