--- a/app/src/main/res/layout/fragment_routing.xml
+++ b/app/src/main/res/layout/fragment_routing.xml
@@ -1,15 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Fragments.Routing">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Fragments.StaticMapView">
 
-    <androidx.fragment.app.FragmentContainerView
+    <ImageView
+            android:background="@color/purple_500"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/maps_view"
-            tools:context=".Fragments.MapsFragment"
-            android:name="com.google.android.gms.maps.SupportMapFragment"/>
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+    <LinearLayout
+            android:padding="20dp"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
+        <TextView
+                android:id="@+id/tv_address"
+                android:textStyle="bold"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:text="Vui lòng chọn địa điểm"/>
+        <TextView
+                android:id="@+id/tv_location"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:text="Tọa độ: 0.0,0.0"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+        >
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="Map type:    "/>
+            <Spinner
+                    android:id="@+id/mapTypesSpin"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+            />
+        </LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+        >
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:text="Zoom level: "/>
+            <Spinner
+                    android:id="@+id/zoomSpin"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+            />
+        </LinearLayout>
 
-</FrameLayout>
+        <Button
+                android:id="@+id/btn_pick"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/purple_500"
+                android:layout_gravity="center_horizontal"
+                android:drawableLeft="@drawable/ic_add_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chọn vị trí"/>
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
